[build-system]
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta"

[project]
name = "promptify-cli" 
version = "0.1.0"      
description = "Interactive CLI to select files, generate markdown, and copy to clipboard."
readme = "README.md"   
requires-python = ">=3.8" 
license = {text = "MIT"} 
authors = [
    {name = "Oliver Proudfoot", email = "oliverproudfoot@gmail.com"},
]
keywords = ["cli", "prompt", "clipboard", "llm", "ai", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.9.0",
    "pyperclip>=1.8.0",
    "gitignore-parser>=0.1.0", 
    "tiktoken>=0.4.0",
    "nbformat>=5.0.0",
    "nbconvert>=7.0.0",
    "prompt_toolkit>=3.0.0",
    "appdirs>=1.4.0",
    "chardet>=4.0.0",
]


[project.scripts]
promptify = "promptify:app"




